# cargo-component-workspace-bindings

./: Cargo.toml
components/cli/: Cargo.toml
components/cli/src/: bindings.rs  main.rs
components/responder/: Cargo.toml
components/responder/src/: bindings.rs  lib.rs
