[workspace]
members = ["components/*"]

[workspace.package]
version = "0.1.0"
# edition = "2021"
# authors = ["Nice Folks"]
# description = "A short description of my package"
# documentation = "https://example.com/bar"

[workspace.dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = "0.21.0"
clap = { version = "4.3.19", features = ["derive"] }
