[package]
name = "cli"
version = { workspace = true }
# edition.workspace = true
# authors.workspace = true
# description.workspace = true
# documentation.workspace = true

[package.metadata.component]
package = "ss:responder"

[package.metadata.component.target]
path = "../../wit"
world = "cli"

[dependencies]
anyhow = "1"
bitflags = { workspace = true }
wit-bindgen-rt = { workspace = true }
clap = { workspace = true }
